@@ -81,13 +81,6 @@
         </dependency>
 
 
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.34</version>
-            <scope>provided</scope>
-        </dependency>
-
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -99,11 +92,12 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.8.13</version> </dependency>
 
-        <!-- <dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency> -->
+            <version>1.18.40</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- JWT Support -->
         <dependency>
@@ -170,6 +164,8 @@
         </dependency>
 
 
+
+
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId>
@@ -188,12 +184,15 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.14.1</version>
-
                     <configuration>
-                        <release>25</release>
                         <source>25</source>
                         <target>25</target>
+                        <compilerArgs>
+                            <arg>--enable-preview</arg>
+                        </compilerArgs>
                     </configuration>
+
+
                 </plugin>
             </plugins>
         </pluginManagement>
